Step04-Orchestrating-Services-with-Kubernetes/doc/code-4-04-posts-srv.yaml
# https://github.com/SiriusZHT/Microservices-with-Node-JS-and-React/commit/3f87cfd4382d7fb6e8b5a2087e89a09d8e3a9c88#diff-dd1828df0222007fc0a3143b2356de7f48ac81d5d5a08621a5831e0f3aeb27ca
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      # 在 cluster 中的 port
      port: 4000
      # Pod 的 port
      targetPort: 4000
