Step04-Orchestrating-Services-with-Kubernetes/doc/code-4-05-comments-srv.yaml
# https://github.com/SiriusZHT/Microservices-with-Node-JS-and-React/commit/3f87cfd4382d7fb6e8b5a2087e89a09d8e3a9c88#diff-528acf543c0dcca3dca721805f6d93dfde484560219d2385f4a356c739e7e803
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      # 在 cluster 中的 port
      port: 4001
      # Pod 的 port
      targetPort: 4001
