Step04-Orchestrating-Services-with-Kubernetes/doc/code-4-08-event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
  namespace: ingress-nginx
spec:
  # 生成 pod 的数量
  replicas: 1
  # 选择器 找到 label 为 app: event-bus 这样键值对的 
  selector:
    matchLabels: 
      app: event-bus
  # pod 的具体配置
  template:
    metadata:
      labels: 
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: heysirius/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-srv
  namespace: ingress-nginx
spec:
  # 默认为 type: ClusterIP 所以可以不用写
  # type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      # 在 cluster 中的 port
      port: 4005
      # Pod 的 port
      targetPort: 4005
