Step04-Orchestrating-Services-with-Kubernetes/doc/code-4-23-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  namespace: ingress-nginx
spec:
  # 生成 pod 的数量
  replicas: 1
  # 选择器 找到 label 为 app: client 这样键值对的 
  selector:
    matchLabels: 
      app: client
  # pod 的具体配置
  template:
    metadata:
      labels: 
        app: client
    spec:
      containers:
        - name: client
          image: heysirius/client:latest
---
apiVersion: v1
kind: Service
metadata:
  name: client-clusterip-srv
  namespace: ingress-nginx
spec:
  # 默认为 type: ClusterIP 所以可以不用写
  # type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      # 在 cluster 中的 port
      port: 3000
      # Pod 的 port
      targetPort: 3000
